# rust-postgres-query

postgres_query/: Cargo.toml
postgres_query/src/: client.rs  execute.rs  lib.rs  parse.rs
postgres_query/src/client/: cache.rs
postgres_query/tests/: deadpool.rs  execute.rs  query_macro.rs
postgres_query_macro/: Cargo.toml
postgres_query_macro/src/: from_sql_row.rs  lib.rs  query.rs
postgres_query_macro/src/from_sql_row/: attrs.rs  partition.rs  validate.rs
