[package]
name = "postgres_query"
version = "0.3.8"
authors = ["Christofer Nolander <christofer.nolander@gmail.com>"]
edition = "2018"
description = "Write and execute SQL queries with ease"
repository = "https://github.com/nolanderc/rust-postgres-query"
license = "MIT OR Apache-2.0"
readme = "../README.md"

[lib]
name = "postgres_query"

[[example]]
name = "basic"
path = "examples/basic.rs"

[features]
deadpool = ["deadpool-postgres"]

[dependencies]
postgres_query_macro = { version = "0.3.3", path = "../postgres_query_macro" }
proc-macro-hack = "0.5"
postgres-types = "0.2"
serde = "1.0"
tokio-postgres = "0.7"
futures = "0.3"
async-trait = "0.1"
thiserror = "1.0"
deadpool-postgres = { version = "0.14", optional = true, default-features = false }

[dev-dependencies]
bytes = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
structopt = "0.3"
anyhow = "1.0"
